fixed overflow issues

--- a/project/src/components/about/About.css
+++ b/project/src/components/about/About.css
@@ -3,6 +3,7 @@
 
 .about-me {
     height: 100vh;
+    overflow: auto;
 }
 .about-title {
     display: flex;
