--- a/project/src/components/skills/Skills.css
+++ b/project/src/components/skills/Skills.css
@@ -3,6 +3,7 @@
 
 .skills-page {
     height: 100vh;
+    overflow: auto;
 }
 .dev-skill {
     display: flex;
